fix drop down visibility issue over video element

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -74,6 +74,11 @@ p img {
 	float: none;
 }
 
+video {
+	position: relative;
+	z-index: -2;
+}
+
 /*remove some default button styles*/
 button {
 	font-size: 100%;
